--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
+  <link rel="icon" href="css/logo.png">
 </head>
 <body>
 
@@ -39,7 +40,7 @@
   var count_particles, stats, update;
   stats = new Stats;
   stats.setMode(0);
-  stats.domElement.style.position = 'absolute';
+  stats.domElement.style.display = 'none';
   stats.domElement.style.left = '0px';
   stats.domElement.style.top = '0px';
   document.body.appendChild(stats.domElement);
