--- a/index.html
+++ b/index.html
@@ -1,64 +1,30 @@
+<html>
 
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Spin Development</title>
-  <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
-  <meta name="author" content="Vincent Garreau" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-  <link rel="icon" href="css/logo.png">
+	<link rel="styleshhet" href="style.css">
+	<title>Spin Development</title>
+
+
+
+
 </head>
+
 <body>
 
-<!-- count particles -->
-<div class="count-particles">
-  <span class="js-count-particles">--</span> particles
+<div class="bgimg">
+  <div class="topleft">
+    <p>Logo</p>
+  </div>
+  <div class="middle">
+    <h1>COMING SOON</h1>
+    <hr>
+    <p>35 days</p>
+  </div>
+  <div class="bottomleft">
+    <p>Some text</p>
+  </div>
 </div>
-
-<!-- particles.js container -->
-<div id="particles-js"></div>
-
-
-
-
-<div class="contact">Under Maintenance
-<ul>
-<li><a href="mailto:info@spindevelopment.co.uk">info@spindevelopment.co.uk</a></li>
-<li>07521412267</li>
-</ul>
-
-</div>
-
-<!-- scripts -->
-<script src="js/particles.js"></script>
-<script src="js/app.js"></script>
-
-<!-- stats.js -->
-<script src="js/lib/stats.js"></script>
-<script>
-  var count_particles, stats, update;
-  stats = new Stats;
-  stats.setMode(0);
-  stats.domElement.style.display = 'none';
-  stats.domElement.style.left = '0px';
-  stats.domElement.style.top = '0px';
-  document.body.appendChild(stats.domElement);
-  count_particles = document.querySelector('.js-count-particles');
-  update = function() {
-    stats.begin();
-    stats.end();
-    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
-      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
-    }
-    requestAnimationFrame(update);
-  };
-  requestAnimationFrame(update);
-</script>
-
-
-
 
 </body>
+
 </html>
